8223271: SplashScreen is still shown if defaulting to headless on MacOS

Reviewed-by: bpb, serb, kcr